Bug 494847 - Systemsettings: Recent files: Fix racist "Blacklist applications not on the list"
Summary: Systemsettings: Recent files: Fix racist "Blacklist applications not on the l...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_recentFiles (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-16 06:30 UTC by foss
Modified: 2024-10-16 08:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description foss 2024-10-16 06:30:51 UTC
SUMMARY
Don't use racist words.

STEPS TO REPRODUCE
1. Open systemsettings
2. Go to Recent files

OBSERVED RESULT
At the bottom, there is a checkbox with the label "Blacklist applications not on the list"

EXPECTED RESULT
Not use racist words/vocabulary.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.2.1
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0
Comment 1 Méven 2024-10-16 07:58:55 UTC
We could use the terms "exclusion list" and "inclusion list" (for whilelist).
Comment 2 foss 2024-10-16 08:12:57 UTC
Yeah, I think "[Do not] Include/Exclude applications [not] on the list" is OK.
Comment 3 Bug Janitor Service 2024-10-16 08:25:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2588
Comment 4 Méven 2024-10-16 08:42:50 UTC
Git commit 31d86b31aa2d8a015717c92a2abdadbe86feb9cd by Méven Car.
Committed on 16/10/2024 at 08:16.
Pushed by meven into branch 'master'.

kcms/recentFiles: rephrase code and text

To improve used vocabulary

M  +1    -1    kcms/recentFiles/CMakeLists.txt
R  +15   -15   kcms/recentFiles/ExcludedApplicationsModel.cpp [from: kcms/recentFiles/BlacklistedApplicationsModel.cpp - 086% similarity]
R  +4    -4    kcms/recentFiles/ExcludedApplicationsModel.h [from: kcms/recentFiles/BlacklistedApplicationsModel.h - 083% similarity]
M  +16   -16   kcms/recentFiles/kcm_recentFiles.cpp
M  +2    -2    kcms/recentFiles/kcm_recentFiles.h
R  +0    -0    kcms/recentFiles/qml/recentFiles/ExcludedApplicationView.qml [from: kcms/recentFiles/qml/recentFiles/BlacklistApplicationView.qml - 100% similarity]
M  +2    -2    kcms/recentFiles/ui/RecentFiles.ui

https://invent.kde.org/plasma/plasma-desktop/-/commit/31d86b31aa2d8a015717c92a2abdadbe86feb9cd