kcms/recentFiles: rephrase code and text

To improve used vocabulary

BUG: 494847